# todo_fastapi

./: README.md
fastapi_todo/: .env  pyproject.toml  test.db
fastapi_todo/tests/: test_main.py
fastapi_todo/todo/: main.py  settings.py
