[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Muhammad Maaz Uddin <39926764+maaznadeem246@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
